--- a/config.toml
+++ b/config.toml
@@ -31,6 +31,18 @@ paginate = 20
     post_meta = ["date", "categories"]
     twitter_cards = true
 
+[markup]
+  [markup.highlight]
+    codeFences = true
+    guessSyntax = false
+    hl_Lines = ""
+    lineNoStart = 1
+    lineNos = false
+    lineNumbersInTable = true
+    noClasses = true
+    style = "monokai"
+    tabWidth = 4
+
 # ページのテーマカラー
 [Params.style.vars]
   highlightColor = "#ffa500"
